locktree-derive/tests/compilefail/locking_from_same_forward_after_dropping_the_forward_only.rs
use locktree_derive::locktree;

locktree! {
    Main {
        mutex: StdMutex<()>
    }
}

fn main() {
    let mut locks = MainLockTree::new(());
    let _a = locks.lock_mutex().0;
    // Invalid
    let _b = locks.lock_mutex();
}
